manifests/deploy-microservice.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: teama-microservice
    stack: frontend
  name: teama-microservice
  namespace: microservices
spec:
  replicas: 3
  selector:
    matchLabels:
      run: teama-microservice
  template:
    metadata:
      labels:
        app: teama-microservice
        run: simple-microservice
    spec:
      containers:
        - image: 219099013464.dkr.ecr.us-west-2.amazonaws.com/teama-microservice
          name: teama-microservice
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
---

kind: Service
apiVersion: v1
metadata:
  name: teama-microservice-service
  namespace: microservices
spec:
  selector:
    source: demo
    app: spinnaker
  ports:
  - protocol: TCP
    port: 30201
    targetPort: 80

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-ingress
  namespace: microservices
spec:
  backend:
    serviceName: teama-microservice-service
    servicePort: 80
